intro en 2.1 klaar
nu doorrrr! die syntax hierarchien

--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -225,3 +225,44 @@
   year = {1996},
   pages = {257-293}
 }
+
+@article{grosu2003,
+  title = {A Unified Theory of `standard' and `transparent' Free Relatives},
+  volume = {21},
+  doi = {10.1075/la.55.07gro},
+  number = {2},
+  journal = {Natural Language and Linguistic Theory},
+  author = {Grosu, Alexander},
+  year = {2003},
+  pages = {247-331}
+}
+
+@phdthesis{gilligan1987,
+  title= {A cross-linguistic approach to the pro-drop parameter},
+  author= {Gilligan, Gary Martin},
+  year= {1987},
+  school= {University of Southern California},
+  address= {Los Angeles, CA}
+}
+
+@misc{moravcsik1978,
+  title = {Agreement},
+  author={Moravcsik, Edith A.},
+  year={1978},
+  publisher={Stanford University Press},
+  address = {Stanford},
+  editor = {Joseph H. Greenberg, Charles A. Ferguson and Edith A. Moravcsik},
+  booktitle = {Universals of Human Language: IV: Syntax},
+  pages = {331-374}
+}
+
+@incollection{bobaljik2006,
+  title = {Where's Φ? Agreement as a Post-Syntactic Operation},
+  booktitle = {Phi-Theory: Phi Features Across Interfaces and Modules},
+  publisher = {Oxford University Press},
+  address = {Oxford},
+  author = {Bobaljik, Jonathan},
+  editor = {Harbour, Daniel and Adger, David and Béjar, Susana},
+  year = {2006},
+  pages = {295-328}
+}
