--- a/introduction.tex
+++ b/introduction.tex
@@ -46,7 +46,7 @@ In \ref{ex:germanrelative2}, the relative clause \tit{den er beim Verstecktspiel
 Compare the two sentences in \ref{ex:germanrelatives}. In both sentences the head is marked as accusative because it is the object in the main clause. The case of the relative pronoun in \ref{ex:germanrelative2} is also accusative, because of it is the object in the relative clause. The case of the relative pronoun in \ref{ex:germanrelative1} is nominative, because it is the subject in the relative clause. So, the case of the relative pronoun in \ref{ex:germanrelative1} differs from the case of the head.
 
 The focus of this dissertation lies on headless relatives. As the name suggests, this type of relative clause lacks a head.\footnote{
-This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing, it is absent, cf. \citealt{citko2005,vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero, \citealt{bresnan1978,groos1981,grosu1996}. At this point in the discussion this distinction is not relevant. I return to the issue in Chapter \ref{ch:connecting}.
+This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing, it is absent, cf. \citealt{citko2005,vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero, \citealt{bresnan1978,groos1981,grosu2003}. At this point in the discussion this distinction is not relevant. I return to the issue in Chapter \ref{ch:connecting}.
 }
 I give an example of a headless relative in Gothic in \ref{ex:gothicaccacc}. The relative clause is \tit{þan -ei arma} `who I pity', marked in gray. There is no head that this relative clause modifies, because it is a headless relative. This is different from the examples from German I gave above, which each had a head.
 The predicate \tit{arma} `pity' takes accusative objects, as indicated by the subscript on the gloss of the verb. The predicate \tit{gaarma} `pity' also takes accusative objects, indicated again by the subscript.
@@ -54,7 +54,7 @@ The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in accusative case.\fo
 The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Therefore, I refer to the relative pronoun as \tit{þan(a)}.
 }
 
-\exg. gaarma \tcol{DG}{þan} \tcol{DG}{-ei} \tcol{DG}{arma}\\
+\exg. gaarma þan \tcol{DG}{-ei} \tcol{DG}{arma}\\
  pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
  `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccacc}
 
@@ -64,12 +64,16 @@ Internal case refers to the case associated with the relative pronoun internal t
 
 External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case which is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothicaccacc}, the missing head is the object of \tit{gaarma} `pity'. The predicate \tit{gaarma} `pity' takes accusative objects. In \ref{ex:gothicaccacc}, the external case is accusative.
 
-Now I return to the question where \tit{þan(a)} in \ref{ex:gothicaccacc} got its case from. In the remainder of this section I show evidence for the claim that the relative pronoun is sensitive to both the internal and the external case. In other words, there is case competition going on in headless relatives. \ref{ex:gothicaccacc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
+Now I return to the question where \tit{þan(a)} in \ref{ex:gothicaccacc} got its case from. In the remainder of this section I show evidence for the claim that the relative pronoun is sensitive to both the internal and the external case.
+This is easy to imagine for the internal case: the internal case reflects the grammatical role of the relative clause. It is a bit more complicated for the external case. The external case is associated with the grammatical role of the missing head in the main clause. The idea is going to be that the external case cannot be reflected a non-existing head. Indirectly, it appears on the relative pronoun.\footnote{
+Later on I will argue that this indirect process is ellipsis.
+}
+This means that the internal and external case come together on the relative pronoun. In other words, there is case competition going on in headless relatives. \ref{ex:gothicaccacc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
 
-Consider the example in \ref{ex:gothicaccdat}. The relative clause \tit{ana þammei lag} `on which he lay' is marked in gray.
+Consider the example in \ref{ex:gothicaccdat}, in which the internal case is dative and the external case is accusative. The relative clause \tit{ana þammei lag} `on which he lay' is marked in gray.
 The internal case is dative. The preposition \tit{ana} `on' takes dative objects, as indicated by the subscript on the preposition.
 The external case is accusative. The predicate \tit{ushafjands} `picking up' takes accusative objects, indicated by the subscript on the predicate.
-The relative pronoun \tit{þamm(a)} appears in dative. This dative can only come from the preposition \tit{ana} `on'.
+The relative pronoun \tit{þamm(a)} appears in dative. This dative can only come from the preposition \tit{ana} `on'. The dative is the internal case here.
 
 \exg. ushafjands \tcol{DG}{ana} \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{lag}\\
  {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\ac{comp} lay\\
@@ -77,10 +81,10 @@ The relative pronoun \tit{þamm(a)} appears in dative. This dative can only come
 
 The conclusion that follows is that the relative pronoun can take the internal case. At this point it remains unclear what happened to the external accusative case.
 
-Now consider the example in \ref{ex:gothicdatacc}. The relative clause \tit{þammei qiþiþ þiudan Iudaie} `whom you call King of the Jews' is marked in gray.
-The internal case is accusative. The predicate \tit{qiþiþ} `say' takes accusative objects, as indicated by the subscript.
-The external case is dative. The predicate \tit{taujau} `do' takes dative indirect objects, as indicated by the subscript.
-The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only come from the predicate \tit{taujau} `do'.
+Now consider the example in \ref{ex:gothicdatacc}, in which the internal case is accusative and the external case is dative. The relative clause \tit{þammei qiþiþ þiudan Iudaie} `whom you call King of the Jews' is marked in gray.
+The internal case is accusative. The predicate \tit{qiþiþ} `say' takes accusative objects, as indicated by the subscript on the predicate.
+The external case is dative. The predicate \tit{taujau} `do' takes dative indirect objects, as indicated by the subscript on the predicate.
+The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only come from the predicate \tit{taujau} `do'. The dative is the external case here.
 
 \exg. hva nu wileiþ ei taujau þamm \tcol{DG}{-ei} \tcol{DG}{qiþiþ} \tcol{DG}{þiudan} \tcol{DG}{Iudaie}?\\
  what now want that do\scsub{[dat]} who.\ac{dat} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
@@ -90,11 +94,11 @@ The conclusion that follows is that the relative pronoun can take the external c
 
 The examples in \ref{ex:gothicaccdat} and \ref{ex:gothicdatacc} have shown that the relative pronoun in headless relatives can take either the internal or the external case. In the examples, the predicates (or preposition) take accusative and dative, and in both cases, the relative pronoun appeared in dative case. In other words, there was a competition between accusative and dative, and dative won.
 
-In the next section, I discuss the content of this dissertation. Before that, I comment on two notational conventions I use throughout this dissertation. First, I place subscripts on the glosses of the predicates. They indicate what the internal or external case is. The subscript on the predicate in the relative clause indicates the internal case. The subscript on the predicate in the main clause indicates the external case.
-For \ref{ex:gothicaccacc} the subscript indicates which case the complement of the verb appears in. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with, as in \ref{ex:gothicaccdat}. A last possibility is that the subscript is [\tsc{nom}] and refers to the case in which the subject appears in.
+In the next section, I discuss the content of this dissertation. Before that, I comment on two notational conventions I use throughout this dissertation. First, I place subscripts on the glosses of the predicates. They indicate what the internal or external case is. The subscript on the predicate in the relative clause indicates the internal case. The subscript on the predicate in the main clause indicates the external case. This subscript can mean different things.
+For \tit{ushafjands} `picking up' \ref{ex:gothicaccacc} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{taujau} `do' \ref{ex:gothicdatacc} in refers to the case of the indirect object of the predicate. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with, as for \tit{ana} `on' in \ref{ex:gothicaccdat}. A last possibility is that the subscript is [\tsc{nom}] and refers to the case in which the subject appears in, of which examples will emerge in the next chapter.
 In other words, the subscript can refer several elements: a subject, object or indirect object of a predicate. There is no overarching theoretical notion that the subscript makes reference to. The subscript simply indicates which case is required within the (main or relative) clause.
 
-Second, I write the relative clause in gray. When the relative pronoun takes the internal case, I mark it gray as well, as shown in \ref{ex:gothicaccdat}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothicdatacc}. When the internal and external case are the same, I.., as shown in \ref{ex:gothicaccacc}.
+Second, I write the relative clause in gray. When the relative pronoun takes the internal case, I mark it in gray as well, as shown in \ref{ex:gothicaccdat}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothicdatacc}. When the internal and external case are the same, the relative pronoun should be black and gray. As this is impossible, I choose to mark it black, as shown in \ref{ex:gothicaccacc}.
 
 
 \section{The content of this dissertation}
