--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -11,67 +11,54 @@ In the last section of this chapter I discuss how \ac{nom}, \ac{acc} and \ac{dat
 
 \section{Case competition in Gothic headless relatives}
 
-In this section I show the behavior of Gothic headless relatives in detail. I systematically go through all case combinations, except for the genitive, which I discuss in Section \ref{sec:genitive}. This leaves the nominative, accusative and dative.
+In this section I show the behavior of Gothic headless relatives in detail. I systematically go through all case combinations, except for the genitive, to which I return in Section \ref{sec:genitive}. This leaves the nominative, accusative and dative. First, I discuss the matching headless relatives, in which the internal and external case match.
 
+Consider the example in \ref{ex:gothicaccaccrep}, repeated from the introduction. In this example, the internal case and the external case are accusative.
+The relative clause, including the relative pronoun, is marked in gray.
+The internal case is accusative. The predicate \tit{arma} `pity' takes accusative objects.
+The external case is accusative as well. Here the predicate \tit{gaarma} `pity' takes accusative objects.
+The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in the accusative.
 
-
-
-I repeat the headless relative from the introduction in which both predicates assign accusative case in \ref{ex:gothicaccaccrep}. The predicate in the relative clause \tit{arma} `pity' assigns accusative case. The predicate in the main clause \tit{gaarma} `pity' also assigns accusative case. The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in accusative case.
-
-\exg. gaarma þan -ei arma\\
- pity\scsub{[acc]} \tcol{DG}{who.\ac{acc}} \tcol{DG}{-\ac{comp}} \tcol{DG}{pity\scsub{[acc]}}\\
+\exg. gaarma \tcol{DG}{þan} \tcol{DG}{-ei} \tcol{DG}{arma}\\
+ pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
  `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccaccrep}
 
+ Consider the example in \ref{ex:gothicnomnom}, in which the internal case and the external case are nominative.
+ The relative clause, including the relative pronoun, is marked in gray.
+ The internal case is nominative. The predicate \tit{matjai} `eats' takes nominative subjects.
+ The external case is nominative as well. Here the predicate \tit{gadauþnai} `die' takes nominative subjects.
+ The relative pronoun \tit{sa} `who.\ac{nom}' appears in the nominative.
 
-
-
-
- Before I discuss evidence for this claim, let me lay out three some terminology and notational conventions I use throughout this dissertation. I use them to make examples and tables as easy to understand as possible, and to allow to avoid long and complicated phrasing.
-
- First, discussing headless relatives, I use the terms internal and external case.
- Internal case refers to the case associated with the relative pronoun internal to the relative clause. More precisely, it is the case, which is associated with the grammatical role that the relative pronoun has internal to the relative clause. In \ref{ex:gothicaccacc}, the relative pronoun is the object of \tit{arma} `pity'. The predicate \tit{arma} `pity' takes accusative objects. So, the internal case is accusative.
- External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case which is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothicaccacc}, the missing head is the object of \tit{gaarma} `pity'. The predicate \tit{gaarma} `pity' takes accusative objects. In \ref{ex:gothicaccacc}, the external case is accusative.
-
- Second, I place subscripts on the glosses of the predicates. They indicate what the internal or external case is. The subscript on the predicate in the relative clause indicates the internal case. The subscript on the predicate in the main clause indicates the external case.
- For \ref{ex:gothicaccacc} the subscript indicates which case the complement of the verb appears in. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with. A last possibility is that the subscript is [\tsc{nom}] and refers to the case in which the subject appears in.
-
- Third and last, for ease of exposition, I write the relative clause in gray, as in \ref{ex:gothicaccacc}.
-
-
-
-
-
-% From this section on I use the terms internal case and external case. Internal case refers to the case assigned internal to the relative clause. In \ref{ex:gothicaccaccrep}, the internal case is assigned by \tit{arma} `pity'. The external case refers to the case assign external to the relative clause, so the main clause. In \ref{ex:gothicaccaccrep}, the external case is assigned by \tit{gaarma} `pity'.
-%
-% I placed subscripts between the square brackets on the glosses of verbs. They indicate which case the predicate requires from the relative pronoun. For \ref{ex:gothicaccaccrep} this simply means which case the verb assigns to its object. Another possibility is that the subscript is placed on a preposition and refer to the case the preposition assigns. A last possibility is that the subscript is [\tsc{nom}] and refers to the case in which the subject appears in. An example of that is given in \ref{ex:gothicnomnom}.
-
-In this example the predicate \tit{matjai} `eats' combines with a nominative subject in the relative clause. In other words, the internal case is nominative. The predicate \tit{gadauþnai} `die' in the main clause also combines with a nominative subject. In other words, the external case is nominative. The relative pronoun \tit{sa} `who.\tsc{nom}' appears in nominative case.
-
-\exg. ei sa -ei þis matjai, ni gadauþnai\\
- that \tcol{DG}{who.\ac{nom}} \tcol{DG}{-\ac{comp}} \tcol{DG}{{of this}} \tcol{DG}{eats\scsub{[nom]}} not die\scsub{[nom]}\\
+\exg. ei \tcol{DG}{sa} \tcol{DG}{-ei} \tcol{DG}{þis} \tcol{DG}{matjai}, ni gadauþnai\\
+ that who.\ac{nom} -\ac{comp} {of this} eats\scsub{[nom]} not die\scsub{[nom]}\\
  `that (he) who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothicnomnom}
 
-In the examples below, the internal case and external case are dative.
+ Consider the examples in \ref{ex:gothicdatdat}, in which the internal case and the external case are dative.
+ The relative clauses, including the relative pronoun, is marked in gray.
+ The internal case is dative. The predicates \tit{gabaur} `tribute', \tit{mota} `custom', \tit{agis} `fear' and \tit{sweriþa} `honour' takes dative objects.
+ The external case is dative as well. The same predicates as in the relative clause take dative objects.
+ The relative pronouns \tit{þamm(a)} `who.\ac{dat}' appear in the dative.
 
-\ex.
-\ag. þamm -ei gabaur gabaur\\
- \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{tribute\scsub{[dat]}} tribute\scsub{[dat]}\\
+\ex.\label{ex:gothicdatdat}
+\ag. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{gabaur} gabaur\\
+ who.\ac{dat} -\ac{comp} tribute\scsub{[dat]} tribute\scsub{[dat]}\\
  `tribute to (him) whom tribute is due'
-\bg. þamm -ei mota mota\\
+\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{mota} mota\\
  \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{custom\scsub{[dat]}} custom\scsub{[dat]}\\
  `custom to (him) whom custom is due'
-\bg. þamm -ei agis agis\\
+\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{agis} agis\\
  \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{fear\scsub{[dat]}} fear\scsub{[dat]}\\
- `fear to (him) whom fear is due'
-\bg. þamm -ei sweriþa sweriþa\\
+ `fear (him) whom fear is due'
+\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{sweriþa} sweriþa\\
  \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{honour\scsub{[dat]}} honour\scsub{[dat]}\\
- `honour to (him) whom honour is due' \flushfill{Gothic, \ac{rom} 13:7, after \pgcitealt{harbert1978}{339}}\label{ex:gothicdatdat}
+ `honour (him) whom honour is due' \flushfill{Gothic, \ac{rom} 13:7, after \pgcitealt{harbert1978}{339}}
 
-Schematically, this looks like:
+A summary of data so far is given in Table \ref{tbl:summarygothicmatch}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun.
+So far only the diagonal line is filled. These are the matching examples, the examples in which the internal case matches the external case. The relative pronoun appears in the internal and external case, and it is marked in dark gray. The nominative is given in \ref{ex:gothicnomnom}, the accusative in \ref{ex:gothicaccaccrep}, and the dative in \ref{ex:gothicdatdat}.
 
 \begin{table}[H]
   \center
-  \caption {Case attraction in headless relatives - only matching}
+  \caption {Summary of Gothic matching headless relative data}
     \begin{tabular}{c|c|c|c}
       \toprule
         \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
@@ -96,59 +83,81 @@ Schematically, this looks like:
             \\
       \bottomrule
     \end{tabular}
+    \label{tbl:summarygothicmatch}
 \end{table}
 
-In what follows I discuss the pattern that occurs when the internal and external case differs.
+In what follows, I discuss the non-matching headless relatives, in which the internal and external case differ.
 
-First, consider a situation in which the internal case is nominative and the external case is accusative. An attested example of that is given in  \ref{ex:gothicnomacc}. Internal to the relative clause, the predicate \tit{ist us Laudeikaion} `is from Laodicea' requires a subject in nominative case. External to the relative clause, \tit{ussiggwaid} `read' requires its object to be in accusative. In the example, the relative pronoun \tit{þo} `what.\tsc{acc}' appears in accusative case. There are no examples of headless relatives with nominative as internal case and accusative as external case and a relative pronoun in nominative.
+Consider the example in \ref{ex:gothicnomacc}, in which the internal case is nominative and the external case is accusative.
+The relative clause, excluding the relative pronoun, is marked in gray.
+The internal case is nominative. The predicate \tit{ist us Laudeikaion} `is from Laodicea' takes nominative subjects.
+The external case is accusative. The predicate \tit{ussiggwaid} `read' takes accusative objects.
+The relative pronoun \tit{þo} `what.\ac{acc}' appears in the external case: the accusative.
+Examples, in which the relative pronoun appears in nominative case, the internal case is nominative and the external case is accusative, are unattested.
 
-\exg. jah þo -ei ist us Laudeikaion jus ussiggwaid\\
- and what.\ac{acc} \tcol{DG}{-\ac{comp}} \tcol{DG}{is\scsub{[nom]}} \tcol{DG}{from} \tcol{DG}{Laodicea} you read\scsub{[acc]}\\
+\exg. jah þo \tcol{DG}{-ei} \tcol{DG}{ist} \tcol{DG}{us} \tcol{DG}{Laudeikaion} jus ussiggwaid\\
+ and what.\ac{acc} -\ac{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
  `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, after \pgcitealt{harbert1978}{357}}\label{ex:gothicnomacc}
 
-% Consider a situation in which the internal case is nominative and the external case is dative. An attested example of that is given in  \ref{ex:gothicnomdat}. Internal to the relative clause, the predicate \tit{iupa sind} `are above' requires a subject in nominative case. External to the relative clause, \tit{fraþjaiþ} `think on' requires its object to be in dative. In the example, the relative pronoun \tit{þaim} `what.\tsc{dat}' appears in dative case. There are no examples of headless relatives with nominative as internal case and dative as external case and a relative pronoun in nominative.
+Consider the example in \ref{ex:gothicnomdat}, in which the internal case is nominative and the external case is dative.
+The relative clause, excluding the relative pronoun, is marked in gray.
+The internal case is nominative. The predicate \tit{sind fraþjaiþ} `are above' takes a nominative subject.
+The external case is dative. The predicate \tit{fraþjaiþ} `think on' takes dative indirect objects.
+The relative pronoun \tit{þaim} `what.\ac{dat}' appears in the external case: the dative.
+Examples, in which the relative pronoun appears in nominative case, the internal case is nominative and the external case is dative, are unattested.
 
-Consider the example in \ref{ex:gothicnomdat}. The relative clause is marked in gray.
-The internal case is nominative. The predicate \tit{sind fraþjaiþ} `are above' takes a nominative subject, as indicated by the subscript on the predicate.
-The external case is dative. The predicate \tit{fraþjaiþ} `think on' takes dative objects, indicated by the subscript on the verb.
-The relative pronoun \tit{þaim} appears in dative. This dative can only come from the predicate \tit{fraþjaiþ} `think on'.
-There are no attested examples of headless relatives with the nominative as internal case and the dative as external case in which the relative pronoun appears in nominative case.
-
-\exg. þaim -ei iupa sind fraþjaiþ \\
- what.\ac{dat} \tcol{DG}{-\ac{comp}} \tcol{DG}{above} \tcol{DG}{are\scsub{[nom]}} {think on}\scsub{[dat]}\\
+\exg. þaim \tcol{DG}{-ei} \tcol{DG}{iupa} \tcol{DG}{sind} fraþjaiþ \\
+ what.\ac{dat} -\ac{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
  `set your mind on those which are above' \flushfill{Gothic, \ac{col} 3:2, after \pgcitealt{harbert1978}{339}}\label{ex:gothicnomdat}
 
-Consider a situation in which the internal case is accusative and the external case is nominative. An attested example of that is given in  \ref{ex:gothicaccnom}. Internal to the relative clause, \tit{frijos} `love' requires its object to be in accusative. External to the relative clause, the predicate \tit{siuks ist} `is sick' requires a subject in nominative case. In the example, the relative pronoun \tit{þan(a)} `who.\tsc{acc}' appears in accusative case. There are no examples of headless relatives with accusative as internal case and nominative as external case and a relative pronoun in nominative.
+Consider the example in \ref{ex:gothicaccnom}, in which the internal case is accusative and the external case is nominative.
+The relative clause, including the relative pronoun, is marked in gray.
+The internal case is accusative. The predicate \tit{frijos} `love' takes accusative objects.
+The external case is nominative. The predicate \tit{siuks ist} `is sick' takes nominative subjects.
+The relative pronoun \tit{þan} `who.\ac{acc}' appears in the internal case: the accusative.
+Examples, in which the relative pronoun appears in nominative case, the internal case is accusative and the external case is nominative, are unattested.
 
-\exg. þan -ei frijos siuks ist\\
- \tcol{DG}{who.\ac{acc}} \tcol{DG}{-\ac{comp}} \tcol{DG}{love\scsub{[acc]}} sick is\scsub{[nom]}\\
+\exg. \tcol{DG}{þan} \tcol{DG}{-ei} \tcol{DG}{frijos} siuks ist\\
+ who.\ac{acc} -\ac{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, after \pgcitealt{harbert1978}{342}}\label{ex:gothicaccnom}
 
-Consider a situation in which the internal case is accusative and the external case is dative. An attested example of that is given in  \ref{ex:gothicaccdatrep}, repeated from the introduction. Internal to the relative clause, \tit{qiþiþ} `say' requires its object to be in accusative. External to the relative clause, \tit{taujau} `do' requires its direct object to be in dative case. In the example, the relative pronoun \tit{þamm(a)} `who.\tsc{dat}' appears in dative case. There are no examples of headless relatives with accusative as internal case and dative as external case and a relative pronoun in accusative.
+Consider the example in \ref{ex:gothicaccdatrep}, repeated from the introduction. In this example, the internal case is accusative and the external case is dative.
+The relative clause, excluding the relative pronoun, is marked in gray.
+The internal case is accusative. The predicate \tit{qiþiþ} `say' takes accusative objects.
+The external case is dative. The predicate \tit{taujau} `do' takes dative indirect objects.
+The relative pronoun \tit{þamm} `who.\ac{dat}' appears in the external case: the dative.
+Examples, in which the relative pronoun appears in accusative case, the internal case is accusative and the external case is dative, are unattested.
 
-\exg. hva nu wileiþ ei taujau þamm -ei qiþiþ þiudan Iudaie?\\
- what now want that do\scsub{[dat]} who.\ac{dat} \tcol{DG}{-\ac{comp}} \tcol{DG}{say\scsub{[acc]}} \tcol{DG}{king} \tcol{DG}{{of Jews}}\\
+\exg. hva nu wileiþ ei taujau þamm \tcol{DG}{-ei} \tcol{DG}{qiþiþ} \tcol{DG}{þiudan} \tcol{DG}{Iudaie}?\\
+ what now want that do\scsub{[dat]} who.\ac{dat} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
  `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}\label{ex:gothicdataccrep}
 
-Consider a situation in which the internal case is dative and the external case is nominative. An attested example of that is given in  \ref{ex:gothicdatnom}. Internal to the relative clause, \tit{fraletada} `is forgiven' requires its object to be in dative. External to the relative clause, the predicate \tit{frijod} `loves' requires a subject in nominative case. In the example, the relative pronoun \tit{þamm(a)} `who.\tsc{dat}' appears in dative case. There are no examples of headless relatives with dative as internal case and nominative as external case and a relative pronoun in nominative.
+Consider the example in \ref{ex:gothicdatnom}, in which the internal case is dative and the external case is nominative.
+The relative clause, including the relative pronoun, is marked in gray.
+The internal case is dative. The predicate \tit{fraletada} `is forgiven' takes dative objects.
+The external case is nominative. The predicate \tit{frijod} `loves' takes nominative subjects.
+The relative pronoun \tit{þamm(a)} `who.\ac{dat}' appears in the internal case: the dative.
+Examples, in which the relative pronoun appears in nominative case, the internal case is dative and the external case is nominative, are unattested.
 
 \exg. iþ þamm -ei leitil fraletada leitil frijod\\
  but \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{little} \tcol{DG}{{is forgiven}\scsub{[dat]}} little loves\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, after \pgcitealt{harbert1978}{342}}\label{ex:gothicdatnom}
 
-Consider a situation in which the internal case is dative and the external case is accusative. An attested example of that is given in  \ref{ex:gothicdataccrep}, repeated from the introduction. Internal to the relative clause, the preposition \tit{ana} `on' requires its complement to be in dative. External to the relative clause, \tit{ushafjands} `picking up' requires its object to be in accusative case. In the example, the relative pronoun \tit{þamm(a)} `who.\tsc{dat}' appears in dative case. There are no examples of headless relatives with dative as internal case and accusative as external case and a relative pronoun in accusative.
+Consider the example in \ref{ex:gothicdataccrep}, repeated from the introduction. In this example, the internal case is dative and the external case is accusative.
+The relative clause, including the relative pronoun, is marked in gray.
+The internal case is dative. The preposition \tit{ana} `on' takes dative complements.
+The external case is accusative. The predicate \tit{ushafjands} `picking up' takes accusative objects.
+The relative pronoun \tit{þamm(a)} `who.\ac{dat}' appears in the internal case: the dative.
+Examples, in which the relative pronoun appears in accusative case, the internal case is dative and the external case is accusative, are unattested.
 
 \exg. ushafjands ana þamm -ei lag\\
  {picking up}\scsub{[acc]} \tcol{DG}{on\scsub{[dat]}} \tcol{DG}{what.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{lay}\\
  `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}\label{ex:gothicaccdatrep}
 
-A summary of the data is given in Table \ref{tbl:summarygothic}. The left column gives the internal case between square brackets. The upper row indicates the external case between square brackets.
-The other cells show the case in of the relative pronoun. In the diagonal there is only a single case. These are the headless relatives in which the internal case is identical to the external case. The relative pronoun is grammatical and marked dark gray. they correspond to the examples x, y and z.
-Six cells show internal and external case differ. The lower left corner shows the internal case pronoun. The upper right corner shows the external case pronoun. The grammatical ones are marked in light gray. The unattested examples are marked with an asterix, and are not marked.\footnote{
+A summary of the Gothic data as a whole is given in Table \ref{tbl:summarygothic}. The left column shows the internal case, the upper row shows the external case. The diagonal is filled with matching examples, marked dark gray.
+The remaining six cells show instances where the internal and external case differ. Within the cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in light gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
 Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For modern languages it means that the examples are ungrammatical.
 }
-The pattern we see is that outer guys are grammatical.
-
 
 \begin{table}[H]
   \center
@@ -157,30 +166,33 @@ The pattern we see is that outer guys are grammatical.
     \label{tbl:summarygothic}
 \end{table}
 
+The three instances in the lower left corner correspond to the examples \ref{ex:gothicaccnom}, \ref{ex:gothicdatnom} and \ref{ex:gothicdataccrep}. In the attested examples, the relative pronoun appears in the internal case.
+The three instances in the upper right corner correspond to the examples in \ref{ex:gothicnomacc}, \ref{ex:gothicnomdat} and \ref{ex:gothicaccdatrep}. In the attested examples, the relative pronoun appears in the external case.
 
-In sum, the situation can be summarized as in \ref{ex:competition1by1}. In a competition, accusative and dative win over nominative. Additionally, dative wins over accusative.
+This can be reformulated as follows. In a competition, dative wins over accusative and nominative. This can be seen in the lowest row and the most right column. Additionally, accusative wins over nominative. In sum, the situation can be summarized as in \ref{ex:competition1by1}.
 
 \ex.\label{ex:competition1by1}
 \a. \tsc{acc} wins over \tsc{nom}
 \b. \tsc{dat} wins over \tsc{nom}
 \b. \tsc{dat} wins over \tsc{acc}
 
-Formulated in a scale of `case strength':
+Formulated in a scale of `case strength' \citealt{harbert1978,pittner1995,vogel2001,grosu2003,caha2019}:
 
-\ex. \tsc{nom} -- \tsc{acc} -- \tsc{dat}\label{ex:casestrength}
+\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}\label{ex:casestrength}
 
-
+In the next few sections I show that this scale of case strength does not only appear in headless relatives. The next section shows two other morphosyntactic phenomena that follow the same scale. Section \ref{sec:casemorphology} shows how the case scale is reflected in morphophonology.
 
 
 \section{Parallels in accessibility hierarchies}
 
-
+In this section I discuss two additional phenomena in morphosyntax that reflect the \tsc{nom} < \tsc{acc} < \tsc{dat} ordering.
 
 \subsection{Agreement}
 
-Moravcsik, Gilligan sub, obj, ind obj
+\citealt{moravcsik1978,gilligan1987} with subject, object and indirect object.
 
-Bobaljik default/dependent/dative
+
+\citealt{bobaljik2006} makes it default/dependent/dative
 
 Mandarin Chinese does not show any agreement on the verb. In German, the verb agrees with the subject. In Huallaga Quechua, the verb agrees with the subject and the object. In Basque, the verb agrees with the subject, the object and the indirect object.
 
@@ -372,7 +384,7 @@ In Basque, subjects, objects and indirect objects can be relativized with the sa
 
 
 
-\section{Case in morphology}
+\section{Case in morphology}\label{sec:casemorphology}
 
 
 
